V0.4.4
---------
 * Transformed signal-slot connections into the new syntax.
 * Removed saving of window states because although it works with well-behaved window managers like kwin and openbox, some WM's don't respect window states completely.
 * Added a preliminary help doc.

V0.4.3
---------
 * Readded own icons because, first, not all icon themes have all the needed icons and, second, QTBUG-50829 exists.
 * Interpret relative URLs as local paths.
 * Removed the senseless stylesheet of search and replace buttons.
 * When activating the window by clicking on the tray icon, also consider the current viewport in addition to the current desktop. For example, Compiz has only one desktop, which may be divided into multiple viewports.
 * When closing a node, consider the possibility that it may be the last node.
 * Added a minimal support for Enlightenment.

V0.4.2
---------
 * At last, found a simple workaround for Qt5's scroll jump bug.
 * Also unminimize the window if the tray icon is clicked.
 * At startup, wait 1 min for the system tray.
 * Don't hide but minimize the window on closing if the tray icon couldn't be created.
 * Added a "Raise/Hide" item to the tray menu.
 * Removed the Enlightenment setting. (Why caring for Enlightenment when it wants to have its own world?).
 * Never use native dialogs (since KFileDialog can't be trusted).
 * Fixed an old bug in auto-indentation.
 * Explicitly delete the timer and tray icon on exiting.

V0.4.1
---------
 * Removed own icons.
 * Added a setting for Enlightenment.
 * Included the header of QDataStream in 'simplecrypt.cpp' for compilation against Qt 5.5.1.
 * Set the modification flag on the main window.

V0.4
---------
 * Exported to Qt5 because Qt 5.4.2 seems OK.
 * Workaround for a Qt5 bug, which prevents insertion of the non-breaking space (zero-width non-joiner, ZWNJ) with SHIFT+SPACE.

V0.3.1
---------
 * Made the systray icon optional and added a command line option for starting minimized.