@@ -3,6 +3,7 @@ V0.4.4
  * Transformed signal-slot connections into the new syntax.
  * Removed saving of window states because although it works with well-behaved window managers like kwin and openbox, some WM's don't respect window states completely.
  * Added a preliminary help doc.
+ * Don't respond to the tray icon when there's a dialog!
 
 V0.4.3
 ---------
